# RTG

./: Cargo.toml  README.md
src/: main.rs
src/modules/: decrypt.rs  discord.rs  finder.rs  mod.rs  paths.rs
src/modules/checks/: antiinjection.rs  antivm.rs  mod.rs
